# scripts

./: README.md
Chaptersaver/: background.js  manifest.json
easySetup/: easySetup.ps1
helper/: Cargo.toml
helper/src/: main.rs
helper/src/project/: decisions.rs  info.rs  mod.rs  requirements.rs  steps.rs  test.rs
helper/template/: main.html  output.html  style.css
