[package]
name = "helper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
git2 = "0.20.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = {version = "1.0.221", features = ["derive"]}
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
